# epitropos

./: Cargo.toml  README.md  flake.nix  nixos-module-collector.nix  nixos-module.nix
collector/: Cargo.toml  build.rs
collector/src/: chain.rs  cli.rs  config.rs  enroll.rs  error.rs  lib.rs  main.rs  server.rs  storage.rs  tls.rs  verify.rs
docs/superpowers/plans/: 2026-04-07-track-a-correctness-and-hardening.md  2026-04-07-track-b-manifest-chain-and-format.md  2026-04-07-track-c-collector-and-forward.md  2026-04-14-track-d-c-sentinel.md
docs/superpowers/specs/: 2026-04-07-track-a-correctness-and-hardening.md  2026-04-07-track-b-manifest-chain-and-format.md  2026-04-07-track-c-collector-and-forward.md  2026-04-14-track-d-c-sentinel.md  2026-04-14-track-d-d-pam-module.md  2026-04-14-track-e-live-session-viewing.md
pam/: Makefile  pam_epitropos.c
proxy/: Cargo.toml  build.rs
proxy/src/: auth_meta.rs  backend.rs  buffer.rs  error.rs  forward.rs  journal.rs  kgv1.rs  main.rs  ns_exec.rs  session_id.rs  term_guard.rs  utmp.rs
sentinel/: Cargo.toml  build.rs
sentinel/src/: chain.rs  config.rs  decrypt.rs  engine.rs  error.rs  events.rs  journal.rs  lib.rs  main.rs  rules.rs  signing.rs  watcher.rs
src/: asciicinema.rs  auth_meta.rs  backend.rs  buffer.rs  config.rs  env.rs  error.rs  event_loop.rs  forward.rs  kgv1.rs  log.rs  main.rs  ns_exec.rs  play.rs  process.rs  pty.rs  rate_limit.rs  seccomp.rs  session_id.rs  signals.rs  term_guard.rs
tests/: vm-test.nix
