[package]
name = "epitropos"
version = "0.1.0"
edition = "2024"
description = "PTY-proxy for tamper-proof session recording via PAM"
license = "MIT"

[dependencies]
base64 = "0.22"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[[bin]]
name = "epitropos"
path = "src/main.rs"

[[bin]]
name = "epitropos-play"
path = "src/play.rs"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
codegen-units = 1
overflow-checks = true
