[package]
name = "epitropos"
version = "0.1.0"
edition = "2024"
description = "PTY-proxy for tamper-proof session recording via PAM"
license = "MIT"

[dependencies]
base64 = "0.22"
inotify = "0.11"
libc = "0.2"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
hex = { version = "0.4", default-features = false, features = ["std"] }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"

[[bin]]
name = "epitropos"
path = "src/main.rs"

[[bin]]
name = "epitropos-play"
path = "src/play.rs"

[[bin]]
name = "epitropos-forward"
path = "src/forward.rs"

[[bin]]
name = "epitropos-ns-exec"
path = "src/ns_exec.rs"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
codegen-units = 1
overflow-checks = true
