[package]
name = "epitropos-collector"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Off-host collector for epitropos session recordings"

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "fs", "macros", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["limit"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
rcgen = "0.13"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
base32 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
libc = "0.2"
time = "0.3"

[dev-dependencies]
tempfile = "3"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
rand = "0.8"
