[package]
name = "epitropos-sentinel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Post-hoc security event detector for epitropos session recordings"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "fs", "macros", "signal"] }
age = { version = "0.11", default-features = false }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
sha2 = "0.10"
hex = "0.4"
inotify = "0.11"
libc = "0.2"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
